// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HellPageLink > recipes > keeps the default part classes stable > pagination 1`] = `
{
  "pageLink": [
    "bg-transparent",
    "border",
    "border-transparent",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-[0.45]",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "data-selected:bg-hell-primary",
    "data-selected:border-hell-primary",
    "data-selected:font-semibold",
    "data-selected:text-hell-primary-foreground",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-sm",
    "inline-flex",
    "items-center",
    "justify-center",
    "leading-none",
    "min-w-[var(--spacing-hell-control-sm)]",
    "px-hell-3",
    "rounded-hell-md",
    "select-none",
    "text-hell-foreground",
    "text-xs",
    "transition-[background-color,border-color,color,box-shadow]",
    "whitespace-nowrap",
  ],
  "pagination": [
    "flex-wrap",
    "gap-hell-1",
    "inline-flex",
    "items-center",
  ],
}
`;

exports[`HellPaginationStrip > recipes > keeps the default part classes stable > paginationStrip 1`] = `
{
  "control": [
    "bg-transparent",
    "border",
    "border-transparent",
    "cursor-pointer",
    "data-disabled:cursor-not-allowed",
    "data-disabled:opacity-[0.45]",
    "data-focus-visible:outline-2",
    "data-focus-visible:outline-hell-focus-ring",
    "data-focus-visible:outline-offset-1",
    "data-hover:bg-hell-surface-muted",
    "data-press:bg-hell-surface-muted",
    "data-selected:bg-hell-primary",
    "data-selected:border-hell-primary",
    "data-selected:font-semibold",
    "data-selected:text-hell-primary-foreground",
    "duration-[var(--hell-duration-fast)]",
    "ease-[var(--ease-hell-out)]",
    "font-medium",
    "gap-hell-2",
    "h-hell-control-sm",
    "inline-flex",
    "items-center",
    "justify-center",
    "leading-none",
    "min-w-[var(--spacing-hell-control-sm)]",
    "px-hell-3",
    "rounded-hell-md",
    "select-none",
    "text-hell-foreground",
    "text-xs",
    "transition-[background-color,border-color,color,box-shadow]",
    "whitespace-nowrap",
  ],
  "controlGlyph": [
    "inline-flex",
    "items-center",
    "justify-center",
    "leading-none",
    "min-w-[1em]",
    "text-base",
  ],
  "strip": [
    "flex-wrap",
    "gap-hell-1",
    "inline-flex",
    "items-center",
  ],
}
`;
